# luna-chess

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  requirements.txt
src/: index.html  luna.py  luna_board.py  luna_html_wrapper.py  main.py  playground.py  train.py
src/luna/: NNet.py  __init__.py  coach.py  eval.py  luNNa.py  luna.py  luna_NN.py  luna_NN_old_Supervised_Learning.py  luna_RL.py  luna_constants.py  luna_dataset.py  luna_eval.py  luna_state.py  luna_utils.py  mcts.py  utils.py
src/luna/game/: __init__.py  arena.py  luna_game.py  player.py  state.py
