[tool.poetry]
name = "luna-chess"
version = "0.1.0"
description = "Zero Knowledge Chess Engine"
authors = ["lipeeeee <filipe.pereirafga@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "luna_chess"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
